my-test/text.yaml
Ingress issuess
[root@7a89d316e761682 ~]# curl https://10.105.94.124:443
curl: (60) SSL certificate problem: unable to get local issuer certificate
More details here: https://curl.se/docs/sslcerts.html

  yum  install openssl
  openssl  genrsa -out ca.key 2048
  openssl req -x509   -new -nodes    -days 365   -key ca.key   -out ca.crt \
  openssl req -x509   -new -nodes    -days 365   -key ca.key   -out ca.crt   -subj "/CN=fastlca-dev.np-0000191.npause1.bakerhughes.com"


 create secret tls my-tls-secret --key ca.key \
  kubectl create secret tls san-app-tls --key ca.key --cert ca.crt


 kubectl create secret tls san-tls-secret --key ca.key \
 kubectl create secret tls san-app-tls --key ca.key --cert ca.crt



  yum  install openssl
  openssl  genrsa -out ca.key 2048
  openssl req -x509   -new -nodes    -days 365   -key ca.key   -out ca.crt \
  openssl req -x509   -new -nodes    -days 365   -key ca.key   -out ca.crt   -subj "/CN=fastlcaqa.np-0000191.npause1.bakerhughes.com"

"secure": false,

https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.9.6/deploy/static/provider/baremetal/deploy.yaml







apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: argocd-server-ingress
  namespace: argocd
spec:
  rules:
  - host: fastlca-qa.np-0000191.npause1.bakerhughes.com
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: https
        path: /argocd
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 10.9.129.17



ALB

Listener 1   HTTP:80    TG  HTTP:30690  (APP)



Listener 2  HTTPS:443  -----TG1----  HTTPS:30000  (APP)
                                                TG2 ----  HTTP:32000 (KEYCLOAK)
                                                 TG3 ----- HTTP:32154  (PGADMIN)


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
      #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  #  tls:
  # - hosts:
  #  - 'fastlca-qa.np-0000191.npause1.bakerhughes.com'
  #  secretName: my-tls-app
  rules:
  - host: fastlca-qa.np-0000191.npause1.bakerhughes.com
    http:
      paths:
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
